--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -44,9 +44,9 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
                         android:fontFamily="@font/poppins_medium"
-                        android:text="You was feeling like"
+                        android:gravity="center"
+                        android:text="You were feeling like"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_12sdp" />
                     <TextView
